--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -225,7 +225,17 @@
     "            audit_areas=[\"Audit Area 1\"],\n",
     "            assigned_id=user.id,\n",
     "        )\n",
-    "        existing_task = next(server.tasks.get(json={\"analysisId\": analysis.id, \"analysisResultId\": task.analysis_result_id, \"transactionId\": task.transaction_id, \"rowId\": task.row_id}), None)\n",
+    "        existing_task = next(\n",
+    "            server.tasks.get(\n",
+    "                json={\n",
+    "                    \"analysisId\": analysis.id,\n",
+    "                    \"analysisResultId\": task.analysis_result_id,\n",
+    "                    \"transactionId\": task.transaction_id,\n",
+    "                    \"rowId\": task.row_id,\n",
+    "                }\n",
+    "            ),\n",
+    "            None,\n",
+    "        )\n",
     "        if existing_task:\n",
     "            print(f\"   - Task already exists as {existing_task.id}\")\n",
     "        else:\n",
