Work with version 1.8.2

--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "%pip install --upgrade mindbridge-api-python-client pydantic<2.12\n",
+    "%pip install --upgrade mindbridge-api-python-client\n",
     "dbutils.library.restartPython()\n",
     "# The above installs the relevant pre-requisites and must be first"
    ]
