Add example of assigning to tasks to different people depending on something like company code

--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -81,12 +81,15 @@
     "\n",
     "analysis_url = \"https://psus.mindbridge.ai/app/organization/68f7dc86efccc75265245b0e/engagement/68f7dc87efccc75265245b10/analysis/68f7dc9eefccc75265245bf4/analyze/financial-statements?productCode=GENERAL_LEDGER#facetBarState=JTdCJTIydmlzaWJsZV9mYWNldF9pZHMlMjIlM0ElNUIlNUQlMkMlMjJmYWNldF9zdGF0ZXMlMjIlM0ElNUIlNUQlN0Q=\"\n",
     "data_table_query = {\n",
-    "    \"effective_date\": {\"$gte\": date(2022, 5, 1), \"$lt\": date(2022, 6, 1)},\n",
-    "    \"risk\": {\"$gte\": 3_000},\n",
+    "    \"effective_date\": {\"$gte\": date(2022, 4, 1), \"$lt\": date(2022, 6, 1)},\n",
+    "    \"risk\": {\"$gte\": 15_00},\n",
     "}\n",
-    "assigned_user_email = \"kevin.paulson@mindbridge.ai\"\n",
-    "\n",
-    "data_table_logical_name = \"gl_journal_lines\""
+    "data_table_logical_name = \"gl_journal_lines\"\n",
+    "column_for_assigning = \"company_code\"\n",
+    "assigned_user_map = {\n",
+    "    \"122644\": \"kevin.paulson@mindbridge.ai\",\n",
+    "    \"8477\": \"michelle.alexander@mindbridge.ai\",\n",
+    "}"
    ]
   },
   {
@@ -160,14 +163,18 @@
     "    f\"Using logical_name: {data_table.logical_name} (type: {data_table.type}, id: {data_table.id})\"\n",
     ")\n",
     "\n",
-    "user, *others = server.users.get(json={\"email\": assigned_user_email})\n",
-    "if not user:\n",
-    "    raise ValueError(f\"User with email {assigned_user_email} not found\")\n",
+    "assigned_user_map_id = {}\n",
+    "for key, assigned_user_email in assigned_user_map.items():\n",
+    "    user, *others = server.users.get(json={\"email\": assigned_user_email})\n",
+    "    if not user:\n",
+    "        raise ValueError(f\"User with email {assigned_user_email} not found\")\n",
     "\n",
-    "if others:\n",
-    "    raise Exception(\n",
-    "        f\"Unexpected error: multiple users found with email {assigned_user_email}\"\n",
-    "    )"
+    "    if others:\n",
+    "        raise Exception(\n",
+    "            f\"Unexpected error: multiple users found with email {assigned_user_email}\"\n",
+    "        )\n",
+    "    \n",
+    "    assigned_user_map_id[key] = user.id"
    ]
   },
   {
@@ -198,7 +205,7 @@
     "print(f\"Exporting to: {temp_file_path}\")\n",
     "async_result = server.data_tables.export(\n",
     "    data_table,\n",
-    "    fields=[\"rowid\", \"txid\", \"risk\", \"effective_date\"],\n",
+    "    fields=[\"rowid\", \"txid\", \"risk\", \"effective_date\", column_for_assigning],\n",
     "    query=data_table_query,\n",
     ")\n",
     "server.data_tables.wait_for_export(async_result)\n",
@@ -215,6 +222,7 @@
     "        print(\n",
     "            f\"- row_id: {row_id}, transaction_id: {transaction_id}, risk: {row['risk']}, effective_date: {row['effective_date']}\"\n",
     "        )\n",
+    "        assigned_id = assigned_user_map_id[row[column_for_assigning]]\n",
     "        task = mbapi.TaskItem(\n",
     "            row_id=row_id,\n",
     "            transaction_id=transaction_id,\n",
@@ -223,7 +231,7 @@
     "            engagement_id=analysis.engagement_id,\n",
     "            analysis_result_id=analysis_result.id,\n",
     "            audit_areas=[\"Audit Area 1\"],\n",
-    "            assigned_id=user.id,\n",
+    "            assigned_id=assigned_id,\n",
     "        )\n",
     "        existing_task = next(\n",
     "            server.tasks.get(\n",
