Add some notebook notes

--- a/7_Task_Assignment_Prototype.ipynb
+++ b/7_Task_Assignment_Prototype.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# MindBridge Task Assignment Prototype\n",
+    "\n",
+    "This notebook demonstrates how to automate the assignment of review tasks in MindBridge using the MindBridge API. It covers:\n",
+    "\n",
+    "- Connecting to a MindBridge analysis and exporting filtered data.\n",
+    "- Assigning tasks to specific users based on data attributes.\n",
+    "\n",
+    "Use this notebook as a template for integrating MindBridge task assignment into your audit workflows."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### Installing the MindBridge API Python Client\n",
+    "\n",
+    "This must be the first code cell executed in the notebook to ensure the [MindBridge API Python Client](https://pypi.org/project/mindbridge-api-python-client/) is available for use."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -19,44 +42,23 @@
    "outputs": [],
    "source": [
     "%pip install --upgrade mindbridge-api-python-client\n",
-    "dbutils.library.restartPython()\n",
-    "# The above installs the relevant pre-requisites and must be first"
+    "dbutils.library.restartPython()"
    ]
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "3fd13672-8bc9-45ae-a5d1-94d985e4a0ca",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
    "source": [
-    "## Storing Your MindBridge API Token in Databricks\n",
-    "If you do not have an API Token already you can follow [Create an API token](https://support.mindbridge.ai/hc/en-us/articles/9349943782039-Create-an-API-token) on our knowledge base. Once that is done, we'll [Create a Databricks-backed secret scope](https://learn.microsoft.com/en-us/azure/databricks/security/secrets/#create-a-databricks-backed-secret-scope) using the Databricks CLI to securely store your token. If you haven't set up the Databricks CLI yet, you can follow [Install or update the Databricks CLI](https://learn.microsoft.com/en-us/azure/databricks/dev-tools/cli/install).\n",
+    "#### Configuration\n",
     "\n",
-    "After installing and configuring the CLI, use the following commands to create a new secret scope and add your API Token to the scope:\n",
+    "Set up the configuration parameters for connecting to the MindBridge analysis and defining the task assignment logic. Here are the variables available to be configured:\n",
     "\n",
-    "```sh\n",
-    "# Create the secret scope named \"mindbridge-api-tutorials\"\n",
-    "databricks secrets create-scope mindbridge-api-tutorials\n",
-    "\n",
-    "# Add your MindBridge API Token to the scope\n",
-    "databricks secrets put-secret mindbridge-api-tutorials MINDBRIDGE_API_TOKEN\n",
-    "```\n",
-    "\n",
-    "Once your token is added, you can verify its existence by running the following:\n",
-    "```sh\n",
-    "databricks secrets list-scopes\n",
-    "databricks secrets list-secrets mindbridge-api-tutorials\n",
-    "```"
+    "- `analysis_url`: The URL of the MindBridge analysis from which to export data. In a later cell this is parsed to extract the analysis result ID and the MindBridge server URL. In many cases you may want to run this immediately after and analysis run, so you may alternatively determine these as part of that process.\n",
+    "- `data_table_query`: A dictionary defining the query to filter the data table rows for which tasks will be created.\n",
+    "- `data_table_logical_name`: The logical name of the data table to export data from (e.g., \"gl_journal_lines\").\n",
+    "- `column_for_assigning`: The column name in the data table used to determine task assignment.\n",
+    "- `assigned_user_map`: A mapping of `column_for_assigning` values to MindBridge user email addresses for task assignment.\n",
+    "- `MINDBRIDGE_API_TOKEN` secret scope must be created in Databricks containing a valid MindBridge API token. For more details see the first notebook in this repository."
    ]
   },
   {
@@ -90,6 +92,15 @@
     "    \"122644\": \"kevin.paulson@mindbridge.ai\",\n",
     "    \"8477\": \"michelle.alexander@mindbridge.ai\",\n",
     "}"
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### Processing\n",
+    "\n",
+    "All cells after this point perform the task assignment process, they wouldn't typically require modification."
    ]
   },
   {
